# Thalor

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CONNECTIVITY_FIX_NOTES_20260408.md  Dockerfile  PART2_REQUEST_METRICS_NOTES.md  PART5_INTELLIGENCE_NOTES_20260410.md  PART7_CANARY_ARTIFACT_NOTES_20260411.md  README.md  README.txt  README_CONTROLLED_LIVE_VALIDATION.md  README_PACKAGE_DASHBOARD_3A_APPEND.md  README_PACKAGE_DASHBOARD_3D_APPEND.md  README_PACKAGE_FINAL_FIX.md  README_PACKAGE_FINAL_FIX_RECOVERY.md  README_PACKAGE_H11_APPEND.md  README_PACKAGE_H7_APPEND.md  README_PACKAGE_INT_HARDEN_1_APPEND.md  README_PACKAGE_INT_OPS_1_APPEND.md  README_PACKAGE_M1_APPEND.md  README_PACKAGE_M4_APPEND.md  README_PACKAGE_M4_PORTFOLIO_RISK_APPEND.md  README_PACKAGE_M7_2_APPEND.md  README_PACKAGE_PRACTICE_OPS_1A_APPEND.md  README_PACKAGE_RCF1_APPEND.md  README_PACKAGE_READY2_APPEND.md  README_PACKAGE_SYNC1A_APPEND.md  README_PACKAGE_SYNC1_APPEND.md  README_PART28_CANARY_CLOSURE.md  README_THALOR_DIAG_V3.md  README_THALOR_DIAG_V4_1_HOTFIX.md  SECURITY.md  THALOR_EXHAUSTIVE_TEST_RUNBOOK.md  config.yaml  docker-compose.prod.yml  docker-compose.vps.yml  docker-compose.yml  requirements-ci.txt  (+7 more)
config/: base.yaml  broker_secrets.yaml.example  live_controlled_practice.yaml  live_controlled_practice.yaml.example  live_controlled_real.yaml  live_controlled_real.yaml.example  local.yaml.example  multi_asset.yaml  multi_asset_live_real.yaml.example  multi_asset_practice.yaml.example  portfolio_example.yaml  practice_portfolio_canary.yaml
configs/: README.md  (+2 more)
(+845 files in other folders)
