[metadata]
name = natbin
version = 0.1.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    thalor = natbin.runtime_app:main
    thalor-diag-suite = natbin.ops.diag_suite:main
    thalor-transport-smoke = natbin.ops.transport_smoke:main
    thalor-redaction-audit = natbin.ops.redaction_audit:main
    thalor-module-smoke = natbin.ops.module_smoke:main
    thalor-practice-preflight = natbin.ops.practice_preflight:main
